--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.11,<4"
 dependencies = [
     "pytest (>=9.0.2,<10.0.0)",
     "scapy (>=2.7.0,<3.0.0)",
-    "pymodbus (==3.5.4)"
+    "pymodbus (>=3.11.0, <3.12.0)"
 ]
 
 [tool.poetry]
