--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "pytest (>=9.0.2,<10.0.0)",
     "scapy (>=2.7.0,<3.0.0)",
     "pymodbus (>=3.11.0, <3.12.0)",
-    "returns (>=0.26.0,<0.27.0)"
+    "returns (>=0.26.0,<0.27.0)",
+    "matplotlib (>=3.10.8,<4.0.0)",
+    "pandas (>=3.0.0,<4.0.0)"
 ]
 
 [tool.poetry]
