--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "pymodbus (>=3.11.0, <3.12.0)",
     "returns (>=0.26.0,<0.27.0)",
     "matplotlib (>=3.10.8,<4.0.0)",
-    "pandas (>=3.0.0,<4.0.0)"
+    "pandas (>=3.0.0,<4.0.0)",
+    "plotly (>=6.5.2,<7.0.0)",
+    "bokeh (>=3.8.2,<4.0.0)"
 ]
 
 [tool.poetry]
