--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "matplotlib (>=3.10.8,<4.0.0)",
     "pandas (>=3.0.0,<4.0.0)",
     "plotly (>=6.5.2,<7.0.0)",
-    "bokeh (>=3.8.2,<4.0.0)"
+    "bokeh (>=3.8.2,<4.0.0)",
+    "paramiko (>=4.0.0,<5.0.0)",
+    "scp (>=0.15.0,<0.16.0)"
 ]
 
 [tool.poetry]
