--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "plotly (>=6.5.2,<7.0.0)",
     "bokeh (>=3.8.2,<4.0.0)",
     "paramiko (>=4.0.0,<5.0.0)",
-    "scp (>=0.15.0,<0.16.0)"
+    "scp (>=0.15.0,<0.16.0)",
+    "pyyaml (>=6.0.3,<7.0.0)"
 ]
 
 [tool.poetry]
